--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -1,4 +1,5 @@
-.map-container {
-    height: 100;
-    width: 100;
-  }
+.g_center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
